# DocExplainSG

./: .gitignore  PDPA_CHECKLIST.md  PRIVACY.md  README.md  render.yaml
api/: .env.example  _ml_out.txt  pyproject.toml  requirements.txt
api/app/: __init__.py  config.py  main.py  schemas.py
api/app/routers/: analyze.py  health.py
api/app/services/: __init__.py  extraction.py  gemini.py  llm.py  prompts.py
api/tests/: test_analyze.py  test_health.py
app/: .npmrc  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js
app/scripts/: gen_icon.py
app/src/: types.ts
app/src/app/: _layout.tsx  index.tsx  result.tsx  review.tsx  summary.tsx
app/src/components/: Collapsible.tsx  LanguageSelector.tsx  ModeSelector.tsx  PrivacyNotice.tsx
app/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  collapsible.tsx  input.tsx  segmented.tsx  select.tsx  text.tsx
app/src/i18n/: index.ts
app/src/i18n/locales/: en.json  ms.json  ta.json  zh.json
app/src/lib/: api.ts  applyFont.ts  config.ts  display.ts  pickers.ts  share.ts  typography.ts  utils.ts
app/src/store/: analysis.tsx  language.tsx
app/src/theme/: theme.ts
samples/: cpf_retirement_topup.txt  generate_samples.py  hdb_lease_appointment.txt  insurance_renewal_notice.txt  iras_notice_of_assessment.txt  mom_workpass_renewal.txt
